# qt-training-2023

./: .gitignore  404.html  README.md  index.html  preparations.html  print.html  references.html  rust-and-wasm.html  searchindex.js  searchindex.json  setup.html  tooling-check.html  wasm-hello-world.html  what-is-webassembly.html
book/: book.toml
book/src/: README.md  SUMMARY.md  license.md  preparations.md  references.md  setup.md  tooling-check.md
book/src/tutorial/: cli.md  library.md
crates/cli/: Cargo.toml
crates/qt-gui/: Cargo.toml  build.rs
crates/qt-gui-qquickpainteditem/: Cargo.toml
crates/qt-gui-qquickpainteditem/qml/: main.qml
crates/qt-gui/src/: image_painter.rs
crates/qt-hello-world/: Cargo.toml  build.rs
crates/qt-hello-world/qml/: main.qml
crates/qt-hello-world/src/: main.rs
crates/with-workspace/: Cargo.toml
on-the-server/: compute-at-edge.html  usecases.html  wasi.html
on-the-web/: usecases.html  wasm-and-js.html
tutorial/: cli.html  edge.html  index.html  library.html  web.html
tutorial/cli/: building-cli.html  final-code.html  hello-world.html  image-filters.html
tutorial/edge/: backend.html  deploy.html  final-code.html  frontend.html  handling-requests.html  javascript.html  new-project.html  run-locally.html  spec.html
tutorial/qt-gui/: build-setup.html  creating-the-gui.html  index.html  qquickpainteditem.html  rust-implementation.html
tutorial/web/: basic-setup.html  final-code.html  frontend.html  hello-world.html  image-filters.html  javascript.html  run-locally.html  wasm-bindgen.html
(+17 files in other folders)
