[package]
name = "qt-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustagram2 = "2"
cxx = "1.0.95"
cxx-qt = { git = "https://github.com/LeonMatthesKDAB/cxx-qt", branch = "qimage" }
cxx-qt-lib = { git = "https://github.com/LeonMatthesKDAB/cxx-qt", branch = "qimage" }

[build-dependencies]
cxx-qt-build = { git = "https://github.com/LeonMatthesKDAB/cxx-qt", branch = "qimage", features = [ "qt_qml", "link_qt_object_files" ] } 
