[package]
name = "qt-hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx-qt = { git="https://github.com/kdab/cxx-qt" }
cxx-qt-lib = { git="https://github.com/kdab/cxx-qt" }

[build-dependencies]
cxx-qt-build = { git="https://github.com/kdab/cxx-qt", features = [ "qt_qml", "link_qt_object_files" ] } 
