[package]
name = "qt-hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx-qt = "0.6"
cxx-qt-lib = "0.6"

[build-dependencies]
cxx-qt-build = { version = "0.6", features = [ "qt_qml", "link_qt_object_files" ] } 
